# matplotlib-backend-pyside2

./: .gitlab-ci.yml  pyproject.toml  setup.cfg
examples/: main.py
