[metadata]
name = matplotlib_backend_pyside2
version = 0.0.9
author = Jovan Mitrevski, Nicklas Osmers
author_email = j.p.mitrevski@gmail.com, nosmers@qass.net
description = A PySide2 backend for matplotlib
long_description = file: README.md
long_description_content_type = text/markdown
# url = 
# project_urls =
    # Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src